--- a/README
+++ b/README
@@ -6,12 +6,12 @@ to access your database.
 
 You will require a recent version of NaviServer (>= 2008-05-12).
 
-  $ make NAVISERVER=/usr/local/ns
-  $ make NAVISERVER=/usr/local/ns install
+   $ make NAVISERVER=/usr/local/ns
+   $ make NAVISERVER=/usr/local/ns install
 
 
-See sample-config.tcl for configuration examples.
+Configuration example: //sample-config.tcl
 
-See doc/html/nsdbi.html for documentation.
+Documentation: https://openacs.org/nsdbi/nsdbi.html
 
-http://naviserver.sourceforge.net/hg/nsdbi/
+Generic DBI driver: https://bitbucket.org/naviserver/nsdbi/
