--- a/README
+++ b/README
@@ -11,6 +11,6 @@ You will require a recent version of NaviServer (>= 2008-05-12).
     $ make NAVISERVER=/usr/local/ns install
 
 
-Configuration example: //sample-config.tcl
+Configuration example: sample-config.tcl
 
 Documentation: https://openacs.org/nsdbi/nsdbi.html
